--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,7 +1,10 @@
-body {
-    background: red;
-}
 
 h1 {
-    color: white;
+    color: black;
+    font-family: "Playfair Display", serif;
+    font-weight: bold;
+}
+
+p {
+    font-family: "Poppins", sans-serif;
 }
