--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,42 +1,55 @@
+:root {
+  --branding-color: #6c63ff;
+  --heading-font-family: 'Playfair Display', serif;
+  --default-font-family: 'Poppins', sans-serif;
+  --secondary-color: #f9f7fe;
+}
 
-h1, h3, h4, h5, h6 {
-    color: black;
-    font-family: "Playfair Display", serif;
-    font-weight: bold;
+body {
+  font-family: var(--default-font-family);
+}
+h1,
+h3,
+h4,
+h5,
+h6 {
+  color: black;
+  font-family: (var(--heading-font-family));
+  font-weight: bold;
 }
 
 h1 {
-    font-size: 96px;
+  font-size: 96px;
 }
 
 p {
-    font-family: "Poppins", sans-serif;
+  font-weight: normal;
 }
-
 .hero {
-    background: #f9f7fe;
-    text-align: center;
+  background: var(--secondary-color);
+  text-align: center;
+  padding: 160px 20px;
 }
 
 .hero p {
-    font-size: 36px;
-    font-weight: bold;
-    margin: 0;
-    color: 272142;
+  font-size: 36px;
+  font-weight: bold;
+  margin: 0;
+  color: 272142;
 }
 
 .hero h2 {
-    font-family: "Poppins", sans-seri;
-    font-weight: normal;
-    line-height: 2;
-    font-size: 24px;
+  font-family: var(--default-font-family);
+  font-weight: normal;
+  line-height: 2;
+  font-size: 24px;
 }
 
 .btn-branding {
-    background: #6c63ff;
-    border-radius: 4px;
-    color: white;
-    font-size: 18px;
-    line-height: 7px;
-    padding: 12px;
+  background: var(--branding-color);
+  border-radius: 4px;
+  color: white;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
 }
