--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -22,8 +22,14 @@ h1 {
   font-size: 96px;
 }
 
+h2 {
+    font-size: 96px;
+}
+
 p {
   font-weight: normal;
+  font-size: 16px;
+  line-height: 30px;
 }
 .hero {
   background: var(--secondary-color);
@@ -41,7 +47,7 @@ p {
 .hero h2 {
   font-family: var(--default-font-family);
   font-weight: normal;
-  line-height: 2;
+  line-height: 1.5;
   font-size: 24px;
 }
 
@@ -52,4 +58,37 @@ p {
   font-size: 18px;
   line-height: 27px;
   padding: 15px 30px;
+}
+
+.btn-branding-outline {
+color: var(--branding-color);
+border: 1px solid var(--branding-color);
+border-radius: 4px;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
+}
+
+.project-description {
+    padding: 120px 60px;
+}
+
+@media (max-width: 900px) {
+
+    h1 {
+        font-size: 44px;
+        line-height: 2;
+    }
+
+    h2 {
+        font-size: 44px;
+    }
+.hero {
+  padding: 80px 20px;
+}
+
+    .project-description {
+        padding: 0;
+        text-align: center;
+    }
 }
