added additional responsive qualities

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -7,6 +7,7 @@
 
 body {
   font-family: var(--default-font-family);
+
 }
 h1,
 h3,
@@ -67,6 +68,18 @@ border-radius: 4px;
   font-size: 18px;
   line-height: 27px;
   padding: 15px 30px;
+}
+
+.email-link {
+  display: flex;
+  justify-content: center;
+ font-family: var(--default-font-family);
+  font-size: 28px;
+  text-decoration: none;
+}
+
+.email-link:hover {
+  text-decoration: underline;
 }
 
 .project-description {
