--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -118,6 +118,11 @@ border-radius: 4px;
   padding: 80px 20px;
 }
 
+.about-section {
+  text-align: center;
+  padding: 0;
+}
+
     .project-description {
         padding: 0;
         text-align: center;
