--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,8 +1,8 @@
 :root {
-  --branding-color: #6c63ff;
+  --branding-color:#5A6A45;
   --heading-font-family: 'Playfair Display', serif;
   --default-font-family: 'Poppins', sans-serif;
-  --secondary-color: #f9f7fe;
+  --secondary-color:#EEEAE5;
 }
 
 body {
@@ -14,7 +14,7 @@ h3,
 h4,
 h5,
 h6 {
-  color: black;
+  color: #5A6A45;
   font-family: (var(--heading-font-family));
   font-weight: bold;
 }
@@ -88,6 +88,7 @@ p {
   font-size: 18px;
   line-height: 27px;
   padding: 15px 30px;
+  text-decoration: none;
 }
 
 .btn-branding-outline {
@@ -113,6 +114,37 @@ border-radius: 4px;
 
 .project-description {
     padding: 120px 60px;
+}
+
+.logo {
+  max-width: 150px;
+}
+
+nav {
+  padding: 20px 0;
+}
+
+nav ul {
+  padding: 0;
+  margin: 0;
+}
+
+nav li {
+  display: inline;
+  list-style: none;
+  line-height: 42px;
+  margin-left: 15px;
+}
+
+nav a {
+  text-decoration: none;
+  color: #72815F;
+  transition: all 100ms ease-in-out;
+}
+
+nav a:hover,
+nav li.active a  {
+  color: var(--branding-color);
 }
 
 @media (max-width: 900px) {
