updated about, contact, and index files. Updated project css and added an image.

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -2,7 +2,7 @@
   --branding-color:#5A6A45;
   --heading-font-family: 'Playfair Display', serif;
   --default-font-family: 'Poppins', sans-serif;
-  --secondary-color:#EEEAE5;
+  --secondary-color:#DAE2C8;
 }
 
 body {
