--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -104,6 +104,13 @@ border-radius: 4px;
   padding: 15px 30px;
 }
 
+.img-thumbnail {
+  width: 15%;
+  border-radius: 2px;
+  border: 1px solid var(--branding-color);
+  margin-top: 50px;
+}
+
 footer {
   margin: 60px 0;
 }
